[package]
name = "w6otx"
version = "0.1.1"
edition = "2021"
description="Power control CLI for W6OTX repeater system."
license-file="../../LICENSE"

[dependencies]
snmp = "0.2.2"
clap = { version = "4.4.8", features = ["derive", "env"] }
inflections = "1.1.1"
strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
#
#tide = "0.16.0"
#async-std = { version = "1.8.0", features = ["attributes"] }
#serde = { version = "1.0", features = ["derive"] }
#femme = "2.2.1"

[package.metadata.deb]
maintainer = "Christopher Hoover <ch@murgatroid.com>"
copyright = "2023, Christopher Hoover <ch@murgatroid.com>"
license-file = ["../../LICENSE", "0"]
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/w6otx_power_cli", "usr/bin/", "755"],
 ]
